k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-tp
  labels:
    name: devops-tp
    app: todo-app
